Fixed horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
     flex-direction: column;
     box-sizing: border-box;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: rgb(250, 182, 182);
 }
 
